package app;


import app.views.AppView;

public class App {
    public static void main(String[] args) {
        AppView.drinkSelection();
    }
}
