package app.drinks;

public interface CoffeeDrink {
    void prepare();
}

