@startuml
class app.drinks.Cappuccino {
+ void prepare()
}
class app.drinks.Espresso {
+ void prepare()
}
class app.App {
+ {static} void main(String[])
}
interface app.drinks.CoffeeDrink {
~ void prepare()
}
class app.views.AppView {
+ {static} void handleDrinkSelection()
}
class app.drinks.Latte {
+ void prepare()
}
class app.machines.CoffeeMachine {
- CoffeeDrink drink
+ void setDrink(CoffeeDrink)
+ void getDrink()
}
class app.utils.ChoiceValidator {
+ {static} int validateChoiceInput(Scanner)
}


app.drinks.CoffeeDrink <|.. app.drinks.Cappuccino
app.drinks.CoffeeDrink <|.. app.drinks.Espresso
app.drinks.CoffeeDrink <|.. app.drinks.Latte
@enduml